force-app/main/default/objects/Career_Identification_Program__c/fields/Career_Identification__c.field-meta.xml
<CustomField>
    <fullName>Career_Identification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Career Identification</label>
    <referenceTo>Career_Identification__c</referenceTo>
    <relationshipName>Program</relationshipName>
    <type>Lookup</type>
</CustomField>