force-app/main/default/objects/Career_Identification_Program__c/fields/Presentation__c.field-meta.xml
<CustomField>
    <fullName>Presentation__c</fullName>
    <label>Presentation</label>
    <type>Url</type>
</CustomField>