force-app/main/default/objects/Career_Identification_Program__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Url</type>
</CustomField>